k8s/frontend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: frontend-service
  namespace: prod
spec:
  type: LoadBalancer   # 👈 IMPORTANT
  selector:
    app: frontend
  ports:
    - port: 80
      targetPort: 80
