k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: angular-service
spec:
  selector:
    app: angular
  ports:
  - port: 80
    targetPort: 80
  type: ClusterIP
